Projet-Compilation-master/src/tp_y.output
Grammaire

    0 $accept: program $end

    1 program: proceduralBloc
    2        | L_classDecl proceduralBloc

    3 L_classDecl: classDecl
    4            | L_classDecl classDecl

    5 classDeclHeader: CLASS CLASS_TYPE '(' Opt_L_classParamDecl ')'

    6 classDecl: classDeclHeader Opt_extendsDecl Opt_constructorBody IS '{' '}'
    7          | classDeclHeader Opt_extendsDecl Opt_constructorBody IS '{' L_fieldDecl '}'
    8          | classDeclHeader Opt_extendsDecl Opt_constructorBody IS '{' L_methodDecl '}'
    9          | classDeclHeader Opt_extendsDecl Opt_constructorBody IS '{' L_fieldDecl L_methodDecl '}'

   10 Opt_L_classParamDecl: %empty
   11                     | L_classParamDecl

   12 L_classParamDecl: classParamDecl
   13                 | L_classParamDecl ',' classParamDecl

   14 classParamDecl: ID ':' CLASS_TYPE

   15 Opt_extendsDecl: %empty
   16                | extendsDecl

   17 extendsDecl: EXTENDS CLASS_TYPE '(' Opt_L_expr ')'

   18 Opt_constructorBody: %empty
   19                    | constructorBody

   20 constructorBody: instructionBloc

   21 L_fieldDecl: fieldDecl
   22            | L_fieldDecl fieldDecl

   23 fieldDecl: varDecl
   24          | VAR STATIC ID ':' CLASS_TYPE ASSIGN expr ';'
   25          | VAR STATIC ID ':' CLASS_TYPE ';'

   26 L_methodDecl: methodDecl
   27             | L_methodDecl methodDecl

   28 methodDecl: DEF OVERRIDE ID '(' Opt_L_methodParamDecl ')' RETURNS CLASS_TYPE methodBody
   29           | DEF OVERRIDE ID '(' Opt_L_methodParamDecl ')' RETURNS CLASS_TYPE ASSIGN expr
   30           | DEF STATIC ID '(' Opt_L_methodParamDecl ')' RETURNS CLASS_TYPE methodBody
   31           | DEF STATIC ID '(' Opt_L_methodParamDecl ')' RETURNS CLASS_TYPE ASSIGN expr
   32           | DEF ID '(' Opt_L_methodParamDecl ')' RETURNS CLASS_TYPE methodBody
   33           | DEF ID '(' Opt_L_methodParamDecl ')' RETURNS CLASS_TYPE ASSIGN expr

   34 Opt_L_methodParamDecl: %empty
   35                      | L_methodParamDecl

   36 L_methodParamDecl: methodParamDecl
   37                  | L_methodParamDecl ',' methodParamDecl

   38 methodParamDecl: ID ':' CLASS_TYPE

   39 methodBody: proceduralBloc
   40           | functionalBloc

   41 instructionBloc: '{' '}'
   42                | '{' L_instr '}'

   43 proceduralBloc: '{' '}'
   44               | '{' L_instr '}'
   45               | '{' L_varDecl IS L_instr '}'

   46 functionalBloc: '{' YIELD expr '}'
   47               | '{' L_instr YIELD expr '}'
   48               | '{' L_varDecl IS L_instr YIELD expr '}'

   49 L_instr: instr
   50        | L_instr instr

   51 instr: expr ';'
   52      | RETURN expr ';'
   53      | proceduralBloc
   54      | functionalBloc
   55      | expr ASSIGN expr ';'
   56      | ifThenElseInstr

   57 ifThenElseInstr: IF expr THEN L_instr ELSE L_instr

   58 Opt_L_expr: %empty
   59           | L_expr

   60 L_expr: expr
   61       | L_expr ',' expr

   62 expr: ID
   63     | arithmExpr
   64     | instanciation
   65     | constant
   66     | concatExpr
   67     | booleanExpr
   68     | selection
   69     | '(' expr ')'

   70 selection: expr '.' ID
   71          | CLASS_TYPE '.' ID
   72          | CLASS_TYPE '.' ID '(' Opt_L_expr ')'
   73          | expr '.' ID '(' Opt_L_expr ')'

   74 concatExpr: expr CONCAT expr

   75 constant: CONST_STR
   76         | CONST_INT
   77         | CONST_VOID

   78 instanciation: NEW CLASS_TYPE '(' Opt_L_expr ')'

   79 arithmExpr: expr ADD expr
   80           | expr SUB expr
   81           | expr MUL expr
   82           | expr DIV expr
   83           | SUB expr
   84           | ADD expr

   85 booleanExpr: expr RELOP expr

   86 L_varDecl: varDecl
   87          | L_varDecl varDecl

   88 varDecl: VAR ID ':' CLASS_TYPE ASSIGN expr ';'
   89        | VAR ID ':' CLASS_TYPE ';'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 5 17 28 29 30 31 32 33 69 72 73 78
')' (41) 5 17 28 29 30 31 32 33 69 72 73 78
',' (44) 13 37 61
'.' (46) 70 71 72 73
':' (58) 14 24 25 38 88 89
';' (59) 24 25 51 52 55 88 89
'{' (123) 6 7 8 9 41 42 43 44 45 46 47 48
'}' (125) 6 7 8 9 41 42 43 44 45 46 47 48
error (256)
IS (258) 6 7 8 9 45 48
CLASS (259) 5
EXTENDS (260) 17
RETURN (261) 52
RETURNS (262) 28 29 30 31 32 33
DEF (263) 28 29 30 31 32 33
STATIC (264) 24 25 30 31
OVERRIDE (265) 28 29
VAR (266) 24 25 88 89
YIELD (267) 46 47 48
CONCAT (268) 74
NEW (269) 78
IF (270) 57
THEN (271) 57
ELSE (272) 57
ADD (273) 79 84
SUB (274) 80 83
MUL (275) 81
DIV (276) 82
CONST_VOID (277) 77
ID (278) 14 24 25 28 29 30 31 32 33 38 62 70 71 72 73 88 89
CONST_STR (279) 75
CLASS_TYPE (280) 5 14 17 24 25 28 29 30 31 32 33 38 71 72 78 88 89
CONST_INT (281) 76
RELOP (282) 85
ASSIGN (283) 24 29 31 33 55 88
UNARY (284)


Non-terminaux, suivis des règles où ils apparaissent

$accept (38)
    à gauche: 0
program (39)
    à gauche: 1 2, à droite: 0
L_classDecl (40)
    à gauche: 3 4, à droite: 2 4
classDeclHeader (41)
    à gauche: 5, à droite: 6 7 8 9
classDecl (42)
    à gauche: 6 7 8 9, à droite: 3 4
Opt_L_classParamDecl (43)
    à gauche: 10 11, à droite: 5
L_classParamDecl (44)
    à gauche: 12 13, à droite: 11 13
classParamDecl (45)
    à gauche: 14, à droite: 12 13
Opt_extendsDecl (46)
    à gauche: 15 16, à droite: 6 7 8 9
extendsDecl (47)
    à gauche: 17, à droite: 16
Opt_constructorBody (48)
    à gauche: 18 19, à droite: 6 7 8 9
constructorBody (49)
    à gauche: 20, à droite: 19
L_fieldDecl (50)
    à gauche: 21 22, à droite: 7 9 22
fieldDecl (51)
    à gauche: 23 24 25, à droite: 21 22
L_methodDecl (52)
    à gauche: 26 27, à droite: 8 9 27
methodDecl (53)
    à gauche: 28 29 30 31 32 33, à droite: 26 27
Opt_L_methodParamDecl (54)
    à gauche: 34 35, à droite: 28 29 30 31 32 33
L_methodParamDecl (55)
    à gauche: 36 37, à droite: 35 37
methodParamDecl (56)
    à gauche: 38, à droite: 36 37
methodBody (57)
    à gauche: 39 40, à droite: 28 30 32
instructionBloc (58)
    à gauche: 41 42, à droite: 20
proceduralBloc (59)
    à gauche: 43 44 45, à droite: 1 2 39 53
functionalBloc (60)
    à gauche: 46 47 48, à droite: 40 54
L_instr (61)
    à gauche: 49 50, à droite: 42 44 45 47 48 50 57
instr (62)
    à gauche: 51 52 53 54 55 56, à droite: 49 50
ifThenElseInstr (63)
    à gauche: 57, à droite: 56
Opt_L_expr (64)
    à gauche: 58 59, à droite: 17 72 73 78
L_expr (65)
    à gauche: 60 61, à droite: 59 61
expr (66)
    à gauche: 62 63 64 65 66 67 68 69, à droite: 24 29 31 33 46 47
    48 51 52 55 57 60 61 69 70 73 74 79 80 81 82 83 84 85 88
selection (67)
    à gauche: 70 71 72 73, à droite: 68
concatExpr (68)
    à gauche: 74, à droite: 66
constant (69)
    à gauche: 75 76 77, à droite: 65
instanciation (70)
    à gauche: 78, à droite: 64
arithmExpr (71)
    à gauche: 79 80 81 82 83 84, à droite: 63
booleanExpr (72)
    à gauche: 85, à droite: 67
L_varDecl (73)
    à gauche: 86 87, à droite: 45 48 87
varDecl (74)
    à gauche: 88 89, à droite: 23 86 87


État 0

    0 $accept: . program $end

    CLASS  décalage et aller à l'état 1
    '{'    décalage et aller à l'état 2

    program          aller à l'état 3
    L_classDecl      aller à l'état 4
    classDeclHeader  aller à l'état 5
    classDecl        aller à l'état 6
    proceduralBloc   aller à l'état 7


État 1

    5 classDeclHeader: CLASS . CLASS_TYPE '(' Opt_L_classParamDecl ')'

    CLASS_TYPE  décalage et aller à l'état 8


État 2

   43 proceduralBloc: '{' . '}'
   44               | '{' . L_instr '}'
   45               | '{' . L_varDecl IS L_instr '}'

    RETURN      décalage et aller à l'état 9
    VAR         décalage et aller à l'état 10
    NEW         décalage et aller à l'état 11
    IF          décalage et aller à l'état 12
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20
    '{'         décalage et aller à l'état 21
    '}'         décalage et aller à l'état 22

    proceduralBloc   aller à l'état 23
    functionalBloc   aller à l'état 24
    L_instr          aller à l'état 25
    instr            aller à l'état 26
    ifThenElseInstr  aller à l'état 27
    expr             aller à l'état 28
    selection        aller à l'état 29
    concatExpr       aller à l'état 30
    constant         aller à l'état 31
    instanciation    aller à l'état 32
    arithmExpr       aller à l'état 33
    booleanExpr      aller à l'état 34
    L_varDecl        aller à l'état 35
    varDecl          aller à l'état 36


État 3

    0 $accept: program . $end

    $end  décalage et aller à l'état 37


État 4

    2 program: L_classDecl . proceduralBloc
    4 L_classDecl: L_classDecl . classDecl

    CLASS  décalage et aller à l'état 1
    '{'    décalage et aller à l'état 2

    classDeclHeader  aller à l'état 5
    classDecl        aller à l'état 38
    proceduralBloc   aller à l'état 39


État 5

    6 classDecl: classDeclHeader . Opt_extendsDecl Opt_constructorBody IS '{' '}'
    7          | classDeclHeader . Opt_extendsDecl Opt_constructorBody IS '{' L_fieldDecl '}'
    8          | classDeclHeader . Opt_extendsDecl Opt_constructorBody IS '{' L_methodDecl '}'
    9          | classDeclHeader . Opt_extendsDecl Opt_constructorBody IS '{' L_fieldDecl L_methodDecl '}'

    EXTENDS  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 15 (Opt_extendsDecl)

    Opt_extendsDecl  aller à l'état 41
    extendsDecl      aller à l'état 42


État 6

    3 L_classDecl: classDecl .

    $défaut  réduction par utilisation de la règle 3 (L_classDecl)


État 7

    1 program: proceduralBloc .

    $défaut  réduction par utilisation de la règle 1 (program)


État 8

    5 classDeclHeader: CLASS CLASS_TYPE . '(' Opt_L_classParamDecl ')'

    '('  décalage et aller à l'état 43


État 9

   52 instr: RETURN . expr ';'

    NEW         décalage et aller à l'état 11
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20

    expr           aller à l'état 44
    selection      aller à l'état 29
    concatExpr     aller à l'état 30
    constant       aller à l'état 31
    instanciation  aller à l'état 32
    arithmExpr     aller à l'état 33
    booleanExpr    aller à l'état 34


État 10

   88 varDecl: VAR . ID ':' CLASS_TYPE ASSIGN expr ';'
   89        | VAR . ID ':' CLASS_TYPE ';'

    ID  décalage et aller à l'état 45


État 11

   78 instanciation: NEW . CLASS_TYPE '(' Opt_L_expr ')'

    CLASS_TYPE  décalage et aller à l'état 46


État 12

   57 ifThenElseInstr: IF . expr THEN L_instr ELSE L_instr

    NEW         décalage et aller à l'état 11
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20

    expr           aller à l'état 47
    selection      aller à l'état 29
    concatExpr     aller à l'état 30
    constant       aller à l'état 31
    instanciation  aller à l'état 32
    arithmExpr     aller à l'état 33
    booleanExpr    aller à l'état 34


État 13

   84 arithmExpr: ADD . expr

    NEW         décalage et aller à l'état 11
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20

    expr           aller à l'état 48
    selection      aller à l'état 29
    concatExpr     aller à l'état 30
    constant       aller à l'état 31
    instanciation  aller à l'état 32
    arithmExpr     aller à l'état 33
    booleanExpr    aller à l'état 34


État 14

   83 arithmExpr: SUB . expr

    NEW         décalage et aller à l'état 11
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20

    expr           aller à l'état 49
    selection      aller à l'état 29
    concatExpr     aller à l'état 30
    constant       aller à l'état 31
    instanciation  aller à l'état 32
    arithmExpr     aller à l'état 33
    booleanExpr    aller à l'état 34


État 15

   77 constant: CONST_VOID .

    $défaut  réduction par utilisation de la règle 77 (constant)


État 16

   62 expr: ID .

    $défaut  réduction par utilisation de la règle 62 (expr)


État 17

   75 constant: CONST_STR .

    $défaut  réduction par utilisation de la règle 75 (constant)


État 18

   71 selection: CLASS_TYPE . '.' ID
   72          | CLASS_TYPE . '.' ID '(' Opt_L_expr ')'

    '.'  décalage et aller à l'état 50


État 19

   76 constant: CONST_INT .

    $défaut  réduction par utilisation de la règle 76 (constant)


État 20

   69 expr: '(' . expr ')'

    NEW         décalage et aller à l'état 11
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20

    expr           aller à l'état 51
    selection      aller à l'état 29
    concatExpr     aller à l'état 30
    constant       aller à l'état 31
    instanciation  aller à l'état 32
    arithmExpr     aller à l'état 33
    booleanExpr    aller à l'état 34


État 21

   43 proceduralBloc: '{' . '}'
   44               | '{' . L_instr '}'
   45               | '{' . L_varDecl IS L_instr '}'
   46 functionalBloc: '{' . YIELD expr '}'
   47               | '{' . L_instr YIELD expr '}'
   48               | '{' . L_varDecl IS L_instr YIELD expr '}'

    RETURN      décalage et aller à l'état 9
    VAR         décalage et aller à l'état 10
    YIELD       décalage et aller à l'état 52
    NEW         décalage et aller à l'état 11
    IF          décalage et aller à l'état 12
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20
    '{'         décalage et aller à l'état 21
    '}'         décalage et aller à l'état 22

    proceduralBloc   aller à l'état 23
    functionalBloc   aller à l'état 24
    L_instr          aller à l'état 53
    instr            aller à l'état 26
    ifThenElseInstr  aller à l'état 27
    expr             aller à l'état 28
    selection        aller à l'état 29
    concatExpr       aller à l'état 30
    constant         aller à l'état 31
    instanciation    aller à l'état 32
    arithmExpr       aller à l'état 33
    booleanExpr      aller à l'état 34
    L_varDecl        aller à l'état 54
    varDecl          aller à l'état 36


État 22

   43 proceduralBloc: '{' '}' .

    $défaut  réduction par utilisation de la règle 43 (proceduralBloc)


État 23

   53 instr: proceduralBloc .

    $défaut  réduction par utilisation de la règle 53 (instr)


État 24

   54 instr: functionalBloc .

    $défaut  réduction par utilisation de la règle 54 (instr)


État 25

   44 proceduralBloc: '{' L_instr . '}'
   50 L_instr: L_instr . instr

    RETURN      décalage et aller à l'état 9
    NEW         décalage et aller à l'état 11
    IF          décalage et aller à l'état 12
    ADD         décalage et aller à l'état 13
    SUB         décalage et aller à l'état 14
    CONST_VOID  décalage et aller à l'état 15
    ID          décalage et aller à l'état 16
    CONST_STR   décalage et aller à l'état 17
    CLASS_TYPE  décalage et aller à l'état 18
    CONST_INT   décalage et aller à l'état 19
    '('         décalage et aller à l'état 20
    '{'         décalage et aller à l'état 21
    '}'         décalage et aller à l'état 55

    proceduralBloc   aller à l'état 23
    functionalBloc   aller à l'état 24
    instr            aller à l'état 56
    ifThenElseInstr  aller à l'état 27
    expr             aller à l'état 28
    selection        aller à l'état 29
    concatExpr       aller à l'état 30
    constant         aller à l'état 31
    instanciation    aller à l'état 32
    arithmExpr       aller à l'état 33
    booleanExpr      aller à l'état 34


État 26

   49 L_instr: instr .

    $défaut  réduction par utilisation de la règle 49 (L_instr)


État 27

   56 instr: ifThenElseInstr .

    $défaut  réduction par utilisation de la règle 56 (instr)


État 28

   51 instr: expr . ';'
   55      | expr . ASSIGN expr ';'
   70 selection: expr . '.' ID
   73          | expr . '.' ID '(' Opt_L_expr ')'
   74 concatExpr: expr . CONCAT expr
   79 arithmExpr: expr . ADD expr
   80           | expr . SUB expr
   81           | expr . MUL expr
   82           | expr . DIV expr
   85 booleanExpr: expr . RELOP expr

    CONCAT  décalage et aller à l'état 57
    ADD     décalage et aller à l'état 58
    SUB     décalage et aller à l'état 59
    MUL     décalage et aller à l'état 60
    DIV     décalage et aller à l'état 61
    RELOP   décalage et aller à l'état 62
    ASSIGN  décalage et aller à l'état 63
    '.'     décalage et aller à l'état 64
    ';'     décalage et aller à l'état 65


État 29

   68 expr: selection .

    $défaut  réduction par utilisation de la règle 68 (expr)


État 30

   66 expr: concatExpr .

    $défaut  réduction par utilisation de la règle 66 (expr)


État 31

   65 expr: constant .

    $défaut  réduction par utilisation de la règle 65 (expr)


État 32

   64 expr: instanciation .

    $défaut  réduction par utilisation de la règle 64 (expr)


État 33

   63 expr: arithmExpr .

    $défaut  réduction par utilisation de la règle 63 (expr)


État 34

   67 expr: booleanExpr .

    $défaut  réduction par utilisation de la règle 67 (expr)


État 35

   45 proceduralBloc: '{' L_varDecl . IS L_instr '}'
   87 L_varDecl: L_varDecl . varDecl

    IS   décalage et aller à l'état 66
    VAR  décalage et aller à l'état 10

    varDecl  aller à l'état 67


État 36

   86 L_varDecl: varDecl .

    $défaut  réduction par utilisation de la règle 86 (L_varDecl)


État 37

    0 $accept: program $end .

    $défaut  accepter


État 38

    4 L_classDecl: L_classDecl classDecl .

    $défaut  réduction par utilisation de la règle 4 (L_classDecl)


État 39

    2 program: L_classDecl proceduralBloc .

    $défaut  réduction par utilisation de la règle 2 (program)


État 40

   17 extendsDecl: EXTENDS . CLASS_TYPE '(' Opt_L_expr ')'

    CLASS_TYPE  décalage et aller à l'état 68


État 41
